# foundry-mcp-gateway

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.fr.md  README.md  SECURITY.md  rustfmt.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
assets/: README.md
docs/: integrators.md
scripts/: check-docs.sh
src/: main.rs
src/foundry/: auth.rs  client.rs  documents.rs  mod.rs  protocol.rs
src/mcp/: http.rs  mod.rs
src/systems/: README.md  daggerheart.rs  dnd5e.rs  mod.rs  swffg.rs  swffg_derived.rs  swffg_dice.rs
src/tools/: addons.rs  admin.rs  cc.rs  cc_family.rs  companion.rs  insight.rs  manage.rs  markdown.rs  mod.rs  session.rs  table.rs  transfer.rs
