[package]
name = "foundry-mcp-gateway"
version = "1.3.0"
edition = "2024"
description = "Serveur MCP indépendant pour Foundry VTT — client socket natif, transport HTTP streamable, multi-systèmes de jeu."
license = "MIT"

[[bin]]
name = "foundry-mcp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
reqwest = { version = "0.12", default-features = false, features = ["cookies", "rustls-tls", "json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
regex = "1"

[profile.release]
lto = true
strip = true
