[package]
name = "foundry-mcp-gateway"
version = "1.5.0"
edition = "2024"
description = "MCP server for Foundry VTT: a native socket client exposing 134 tools over streamable HTTP, with pluggable game-system modules."
license = "MIT"
repository = "https://github.com/wanoo/foundry-mcp-gateway"
homepage = "https://github.com/wanoo/foundry-mcp-gateway"
documentation = "https://github.com/wanoo/foundry-mcp-gateway/blob/main/docs/integrators.md"
readme = "README.md"
keywords = ["mcp", "foundry-vtt", "ttrpg", "gateway", "llm"]
categories = ["command-line-utilities", "game-development", "web-programming::http-server"]
# edition 2024 exige Rust 1.85 : le dire ici donne une erreur claire au lieu
# d'une avalanche d'erreurs de syntaxe sur une vieille toolchain.
rust-version = "1.85"
# Le paquet publié n'a pas besoin de la doc annexe ni de la CI.
exclude = ["/docs", "/.github", "/scripts", "/foundry-local", "*.md", "!README.md"]

[[bin]]
name = "foundry-mcp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tokio-tungstenite = { version = "0.30", features = ["rustls-tls-webpki-roots"] }
reqwest = { version = "0.12", default-features = false, features = ["cookies", "rustls-tls", "json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
regex = "1"

[profile.release]
lto = true
strip = true
